tools/crates/vendor/toml_edit-0.19.15/tests/fixtures/invalid/string/bad-uni-esc-2.stderr
TOML parse error at line 1, column 13
  |
1 | str = "val\Ux"
  |             ^
invalid unicode 8-digit hex code
